@@ -23,6 +23,8 @@
        See issue #146. (Stefan)
 - NEW: Option to switch to the newly created branch/tag in the branch/tag
        dialog. See issue #150. (Stefan)
+- NEW: Button in TortoiseMerge to switch the left and right view.
+       See issue #152. (Stefan)
 - NEW: Diffing of properties. See issue #133. (Stefan)
 - NEW: 'Open' and 'Open with...' commands in the progress dialog. (Stefan)
 - NEW: Showing the log messages between two tags. See issue #111. (Stefan)
